--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -7,14 +7,18 @@
 <body>
     <div style="padding-left: 20px;">
         <h1>Your Playlists</h1>
-        {% for playlist in playlists %}
-            <div>
-                <p>{{ playlist['name'] }}</p>
-                {% for image in playlist['images'] %}
-                    <img src="{{ image }}" alt="Playlist Image" style="max-width: 200px; max-height: 200px;">
-                {% endfor %}
-            </div>
-        {% endfor %}
+        {% if playlists %}
+            {% for playlist in playlists %}
+                <div style="margin-bottom: 20px;">
+                    <p>{{ playlist['name'] }}</p>
+                    {% for image in playlist['images'] %}
+                        <img src="{{ image }}" alt="Playlist Image" style="max-width: 200px; max-height: 200px; margin-bottom: 10px;">
+                    {% endfor %}
+                </div>
+            {% endfor %}
+        {% else %}
+            <p>No playlists found.</p>
+        {% endif %}
     </div>
     <form style="padding-left: 20px;" action="/home" method="get" enctype="multipart/form-data">
         <input type="submit" name="Back" value="Back"/>
