--- a/templates/landing.html
+++ b/templates/landing.html
@@ -14,5 +14,8 @@
         <li><a href='/songs'> See your most listened to songs </a> </li>
         <li><a href='/artists'> See your most listened to artists </a> </li>
         <li><a href='/recommendations'> See recommended songs </a></li>
+        <li><a href="/top_tracks_recommendations">See recommended top songs</a></li>
+        <li><a href="/global_and_kr_tendency">See Weekly updated playlist of new domestic and international tracks
+        & South Korea's most played song of the week.</a></li>
     </div>
 </body>
