--- a/templates/songlist.html
+++ b/templates/songlist.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - Top 10 Albums - 2023</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="../static/css/SLstyle.css">
+{% extends "layout/recmmdLayout.html" %}
 
-</head>
-<body>
+{% block content %}
+
 <!-- partial:index.partial.html -->
 <div id='timeline'>
   <div class='row'>
@@ -57,10 +51,5 @@
   <div id='inner'></div>
 </div>
 <audio id='audio' preload='' src=''></audio>
-<!-- partial -->
-  <script src='https://unpkg.com/gsap@3/dist/gsap.min.js'></script>
-  <script src='https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js'></script>
-  <script src='https://unpkg.com/splitting/dist/splitting.min.js'></script><script  src="../static/js/SLscript.js"></script>
 
-</body>
-</html>
+{% endblock %}
