--- a/templates/recommendations.html
+++ b/templates/recommendations.html
@@ -2,14 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>See Spotify Data & Chatbot</title>
+    <title>Music Recommendations & Chat Support</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
     <div style="padding-left: 20px;">
-        <h1>See your Spotify Data</h1>
-        <a href="/login">Click here to login!</a>
+        <h1>Here are some songs we think you would like based on your favorite artists</h1>
+        <ul>
+            {% for recommendation in recommend_info %}
+            <li>
+                <img src="{{ recommendation.album_image_url }}" alt="Album Image" style="width: 100px; height: 100px; float: left; margin-right: 10px;">
+                <div>
+                    <h3>{{ recommendation.track_name }}</h3>
+                    <p>by {{ recommendation.artist_name }}</p>
+                    {% if recommendation.preview_url %}
+                    <audio controls>
+                        <source src="{{ recommendation.preview_url }}" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                    {% endif %}
+                </div>
+                <div style="clear: both;"></div>
+            </li>
+            {% endfor %}
+        </ul>
+        <form action="/home" method="get" enctype="multipart/form-data">
+            <input type="submit" name="Back" value="Back"/>
+        </form>
     </div>
 
     <div class="container">
@@ -20,7 +40,7 @@
                         <img src="{{ url_for('static', filename='images/kanye.jpg') }}" />
                     </div>
                     <div class="chatbox__content--header">
-                        <h4 class="chatbox__heading--header">Chat Support</h4>
+                        <h4 class="chatbox__heading--header">Chat support</h4>
                         <p class="chatbox__description--header">G.O.A.T</p>
                     </div>
                 </div>
