--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -28,9 +28,12 @@
         <!-- Template Stylesheet -->
         <link href="../static/css/style.css" rel="stylesheet">
        
+        <!-- chatbot StyleSheet -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     </head>
 
-    <body>
+    <body style="background-color: white;">
 
         <!-- Spinner Start -->
         <div id="spinner" class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50  d-flex align-items-center justify-content-center">
@@ -223,52 +226,49 @@
 
         <!-- Back to Top -->
         <!-- <a href="#" class="btn btn-primary border-3 border-primary rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>    -->
-
-
         
-        
-    <div class="container">
-        <div class="chatbox">
-            <div class="chatbox__support">
-                <div class="chatbox__header">
-                    <div class="chatbox__image--header">
-                        <img src="{{ url_for('static', filename='images/kanye.jpg') }}" />
+
+        <!-- chat bot start -->
+        <div class="btn-fixed">
+            <div class="chatbox">
+                <div class="chatbox__support">
+                    <div class="chatbox__header">
+                        <div class="chatbox__image--header">
+                            <img src="{{ url_for('static', filename='images/kanye.jpg') }}" />
+                        </div>
+                        <div class="chatbox__content--header">
+                            <h4 class="chatbox__heading--header">Chat Support</h4>
+                            <p class="chatbox__description--header">G.O.A.T</p>
+                        </div>
                     </div>
-                    <div class="chatbox__content--header">
-                        <h4 class="chatbox__heading--header">Chat Support</h4>
-                        <p class="chatbox__description--header">G.O.A.T</p>
+                    <div class="chatbox__messages">
+                        <div></div>
+                    </div>
+                    <div class="chatbox__footer">
+                        <input type="text" placeholder="Write a message...">
+                        <button class="chatbox__send--footer send__button">Send</button>
                     </div>
                 </div>
-                <div class="chatbox__messages">
-                    <div></div>
+                <div class="chatbox__button">
+                    <button><img src="{{ url_for('static', filename='images/chatbox-icon.svg') }}" /></button>
                 </div>
-                <div class="chatbox__footer">
-                    <input type="text" placeholder="Write a message...">
-                    <button class="chatbox__send--footer send__button">Send</button>
-                </div>
-            </div>
-            <div class="chatbox__button">
-                <button><img src="{{ url_for('static', filename='images/chatbox-icon.svg') }}" /></button>
             </div>
         </div>
-    </div>
+    
+        <script> $SCRIPT_ROOT = {{ request.script_root|tojson }};</script>
+        <script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
+        <!-- chat bot end -->
 
-    <script>
-        $SCRIPT_ROOT = {{ request.script_root|tojson }};
-    </script>
-    <script type="text/javascript" src="{{ url_for('static', filename='app.js') }}"></script>
+        <!-- JavaScript Libraries -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="../static/lib/easing/easing.min.js"></script>
+        <script src="../static/lib/waypoints/waypoints.min.js"></script>
+        <script src="../static/lib/lightbox/js/lightbox.min.js"></script>
+        <script src="../static/lib/owlcarousel/owl.carousel.min.js"></script>
 
-        
-    <!-- JavaScript Libraries -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../static/lib/easing/easing.min.js"></script>
-    <script src="../static/lib/waypoints/waypoints.min.js"></script>
-    <script src="../static/lib/lightbox/js/lightbox.min.js"></script>
-    <script src="../static/lib/owlcarousel/owl.carousel.min.js"></script>
-
-    <!-- Template Javascript -->
-    <script src="../static/js/main.js"></script>
+        <!-- Template Javascript -->
+        <script src="../static/js/main.js"></script>
     </body>
 
 </html>
