--- a/templates/start.html
+++ b/templates/start.html
@@ -15,7 +15,11 @@
 
         <!-- Template Stylesheet -->
         <link href="../static/css/style.css" rel="stylesheet">
-       
+
+        <!-- chatbot Stylesheet -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
     </head>
 
     <body style="background-color:black">
@@ -23,7 +27,7 @@
     
     <!-- content start -->
 
-        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+        <div style="padding: 40px"></div>
 
         <div class="text-center mx-auto mb-5" style="max-width: 1000px;">
             <h1 class="display-1" style="font-size: 8rem; color:#dee2e6">SEE YOUR SPOTIFY DATA</h1>
@@ -31,6 +35,39 @@
         </div>
 
     <!-- content end -->
+
+
+    <!-- chatbot start -->
+    <div class="container">
+        <div class="chatbox">
+            <div class="chatbox__support">
+                <div class="chatbox__header">
+                    <div class="chatbox__image--header">
+                        <img src="{{ url_for('static', filename='images/kanye.jpg') }}" />
+                    </div>
+                    <div class="chatbox__content--header">
+                        <h4 class="chatbox__heading--header">Chat Support</h4>
+                        <p class="chatbox__description--header">G.O.A.T</p>
+                    </div>
+                </div>
+                <div class="chatbox__messages">
+                    <div></div>
+                </div>
+                <div class="chatbox__footer">
+                    <input type="text" placeholder="Write a message...">
+                    <button class="chatbox__send--footer send__button">Send</button>
+                </div>
+            </div>
+            <div class="chatbox__button">
+                <button><img src="../static/images/chatbox-icon.svg" /></button>
+            </div>
+        </div>
+    </div>
+
+    <script>$SCRIPT_ROOT = {{ request.script_root|tojson }};</script>
+    <script src="../static/app.js"></script>
+
+    <!-- chatbot end -->
 
     </body>
 
