put profiles & change btn path

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -14,7 +14,7 @@
         <li><a href='/songs'> See your most listened to songs </a> </li>
         <li><a href='/artists'> See your most listened to artists </a> </li>
         <li><a href='/songlist'> See recommended songs </a></li>
-        <li><a href="/global_top_tracks">See  Global top songs</a></li>
+        <li><a href="/global_top_tracks">Global top tracks</a></li>
         <li><a href="/global_and_kr_tendency">See Weekly updated playlist of new domestic and international tracks
         & South Korea's most played song of the week.</a></li>
     </div>
