--- a/templates/main.html
+++ b/templates/main.html
@@ -58,62 +58,74 @@
                         </div>
                         
                         <div class="col-lg-6">
-                            <div class="d-flex p-4 rounded mb-4 bg-white">
-                                <div class="col-3 row align-items-center">
-                                    <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
+                            <a href="/playlists">
+                                <div class="d-flex p-4 rounded mb-4 bg-white">
+                                    <div class="col-3 row align-items-center">
+                                        <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
+                                    </div>
+                                    <div class="p-4">
+                                        <h4>Your Playlist</h4>
+                                        <p class="mb-2">check your playlists!<br/><br/></p>
+                                    </div>
                                 </div>
-                                <div class="p-4">
-                                    <h4>Your Playlist</h4>
-                                    <p class="mb-2">check your playlists!<br/><br/></p>
+                            </a>    
+                            <a href="/songs">
+                                <div class="d-flex p-4 rounded mb-4 bg-white">
+                                    <div class="col-3 row align-items-center">
+                                        <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
+                                    </div>
+                                    <div class="p-4">
+                                        <h4>Most Listened Song</h4>
+                                        <p class="mb-2">You can check what songs you usually enjoy listening <br/><br/></p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="d-flex p-4 rounded mb-4 bg-white">
-                                <div class="col-3 row align-items-center">
-                                    <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
+                            </a>
+                            <a href="/artists">
+                                <div class="d-flex p-4 rounded bg-white">
+                                    <div class="col-3 row align-items-center">
+                                        <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
+                                    </div>
+                                    <div class="p-4">
+                                        <h4>Most Listened Artists</h4>
+                                        <p class="mb-2">You can check what artists you usually like<br/><br/></p>
+                                    </div>
                                 </div>
-                                <div class="p-4">
-                                    <h4>Most Listened Song</h4>
-                                    <p class="mb-2">You can check what songs you usually enjoy listening <br/><br/></p>
-                                </div>
-                            </div>
-                            <div class="d-flex p-4 rounded bg-white">
-                                <div class="col-3 row align-items-center">
-                                    <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
-                                </div>
-                                <div class="p-4">
-                                    <h4>Most Listened Artists</h4>
-                                    <p class="mb-2">You can check what artists you usually like<br/><br/></p>
-                                </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="col-lg-6">
-                            <div class="d-flex p-4 rounded mb-4 bg-white">
-                                <div class="col-3 row align-items-center">
-                                    <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
+                            <a href="/songlist">
+                                <div class="d-flex p-4 rounded mb-4 bg-white">
+                                    <div class="col-3 row align-items-center">
+                                        <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
+                                    </div>
+                                    <div class="p-4">
+                                        <h4>SOTS recommends you</h4>
+                                        <p class="mb-2">SOTS AI song recommendation based on your spotify data</p>
+                                    </div>
                                 </div>
-                                <div class="p-4">
-                                    <h4>SOTS recommends you</h4>
-                                    <p class="mb-2">SOTS AI song recommendation based on your spotify data</p>
+                            </a>
+                            <a href="/global_top_tracks">
+                                <div class="d-flex p-4 rounded mb-4 bg-white">
+                                    <div class="col-3 row align-items-center">
+                                        <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
+                                    </div>
+                                    <div class="p-4">
+                                        <h4>Global top tracks</h4>
+                                        <p class="mb-2">global hot track<br/><br/></p>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="d-flex p-4 rounded mb-4 bg-white">
-                                <div class="col-3 row align-items-center">
-                                    <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
+                            </a>
+                            <a href="/global_and_kr_tendency">
+                                <div class="d-flex p-4 rounded bg-white">
+                                    <div class="col-3 row align-items-center">
+                                        <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
+                                    </div>
+                                    <div class="p-4">
+                                        <h4>RECENT HOT TRACKS</h4>
+                                        <p class="mb-2">see weekly playlist of new domestic and international tracks AND South Korea's most played song of the week</p>
+                                    </div>
                                 </div>
-                                <div class="p-4">
-                                    <h4>(TOP) SOTS recommends you</h4>
-                                    <p class="mb-2">SOTS AI song recommendation based on your spotify data AND recent hot track</p>
-                                </div>
-                            </div>
-                            <div class="d-flex p-4 rounded bg-white">
-                                <div class="col-3 row align-items-center">
-                                    <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
-                                </div>
-                                <div class="p-4">
-                                    <h4>RECENT HOT TRACKS</h4>
-                                    <p class="mb-2">see weekly playlist of new domestic and international tracks AND South Korea's most played song of the week</p>
-                                </div>
-
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -496,11 +508,11 @@
                         <a href="#">
                             <div class="featurs-item text-center rounded p-4 shadow">
                                 <div class="featurs-icon btn-square rounded-circle bg-secondary mb-5 mx-auto">
-                                    <img src="" style="width:85px">
+                                    <img src="../static/img/mainImg/MimoSeungJin.png" style="width:85px">
                                 </div>
                                 <div class="featurs-content text-center">
-                                    <h5>Name</h5>
-                                    <p class="mb-0">github? insta?</p>
+                                    <h5>Ham SeungJin</h5>
+                                    <p class="mb-0">@Hamseungjin</p>
 
                                 </div>
                             </div>
@@ -524,12 +536,12 @@
                         <a href="#">
                         <div class="featurs-item text-center rounded p-4 shadow">
                             <div class="featurs-icon btn-square rounded-circle bg-secondary mb-5 mx-auto">
-                                <img src="" style="width: 60px">
+                                <img src="../static/img/mainImg/mimoDoHyun.jpg" style="width: 85px">
                             </div>
 
                             <div class="featurs-content text-center">
-                                <h5>name</h5>
-                                <p class="mb-0">github? insta?</p>
+                                <h5>Kim Dohyun</h5>
+                                <p class="mb-0">@neeewbieee</p>
                             </div>
                         </div>
                         </a>
@@ -538,12 +550,12 @@
                         <a href="#">
                         <div class="featurs-item text-center rounded p-4 shadow ">
                             <div class="featurs-icon btn-square rounded-circle bg-secondary mb-5 mx-auto">
-                                <img src="" style="width: 60px">
+                                <img src="../static/img/mainImg/mimoFlorian.jpg" style="width: 85px">
                             </div>
 
                             <div class="featurs-content text-center">
-                                <h5>name</h5>
-                                <p class="mb-0">github? insta?</p>
+                                <h5>Florian</h5>
+                                <p class="mb-0">@Florian-Fogliani</p>
                             </div>
                         </div>
                         </a>
