insert codepen.io SCSS / feat top track on main

--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -50,7 +50,7 @@
                 <div class="d-flex justify-content-between">
                     <div class="top-info ps-2">
                         <small class="me-3"><i class="fas fa-map-marker-alt me-2 text-secondary"></i> <a href="#" class="text-white">123 Street, New York</a></small>
-                        <small class="me-3"><i class="fas fa-envelope me-2 text-secondary"></i><a href="#" class="text-white">Email@Example.com</a></small>
+                        <small class="me-3"><i class="fas fa-envelope me-2 text-secondary"></i><a href="#" class="text-white">ddasda</a></small>
                     </div>
                     <div class="top-link pe-2">
                         <a href="#" class="text-white"><small class="text-white mx-2">Privacy Policy</small>/</a>
@@ -67,24 +67,24 @@
                     </button>
                     <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
                         <div class="navbar-nav mx-auto">
-                            <a href="index.html" class="nav-item nav-link active">Home</a>
+                            <a href="/" class="nav-item nav-link active">Home</a>
 
-                            <a href="shop.html" class="nav-item nav-link">playlists</a>
+                            <a href="/playlists" class="nav-item nav-link">playlists</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">most listened</a>
                                 <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                                    <a href="cart.html" class="dropdown-item">to songs</a>
-                                    <a href="chackout.html" class="dropdown-item">to artists</a>
+                                    <a href="/songs" class="dropdown-item">to songs</a>
+                                    <a href="/artists" class="dropdown-item">to artists</a>
                                 </div>
                             </div>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">recommended</a>
                                 <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                                    <a href="cart.html" class="dropdown-item">songs</a>
-                                    <a href="chackout.html" class="dropdown-item">TOP songs</a>
+                                    <a href="/songlist" class="dropdown-item">songs</a>
+                                    <a href="/global_top_tracks" class="dropdown-item">TOP songs</a>
                                 </div>
                             </div>
-                            <a href="contact.html" class="nav-item nav-link">NEW & TOP track</a>
+                            <a href="/global_and_kr_tendency" class="nav-item nav-link">NEW & TOP track</a>
 
                         </div>
                         <div class="d-flex m-3 me-0">
