--- a/templates/reviewList.html
+++ b/templates/reviewList.html
@@ -15,7 +15,7 @@
     <!-- Single Page Header End -->
 
 
-    <!-- Cart Page Start -->
+    <!-- review list Start -->
     <div class="container-fluid py-5">
         <div class="container py-5">
             <div class="table-responsive">
@@ -147,5 +147,5 @@
             
         </div>
     </div>
-    <!-- Cart Page End -->
+    <!-- review list End -->
 {% endblock %}
