Modify home page, playlists. Addthe front of Most Listened (songs and artists)

--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -1,5 +1,5 @@
 {% extends "layout/layout.html" %}
-{% block title %} playlist {% endblock %}
+{% block title %} Playlists {% endblock %}
 {% block content %}
 
 
@@ -8,8 +8,7 @@
         <h1 class="text-center text-white display-6">Cart</h1>
         <ol class="breadcrumb justify-content-center mb-0">
             <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Pages</a></li>
-            <li class="breadcrumb-item active text-white">Cart</li>
+            <li class="breadcrumb-item"><a href="#">Playlists</a></li>
         </ol>
     </div>
     <!-- Single Page Header End -->
