--- a/templates/layout/layout.html
+++ b/templates/layout/layout.html
@@ -53,7 +53,7 @@
                         <small class="me-3"><i class="fas fa-envelope me-2 text-secondary"></i><a href="#" class="text-white">Team G.O.A.T</a></small>
                     </div>
                     <div class="top-link pe-2">
-                        <a href="#" class="text-white"><small class="text-white mx-2">Adimin</small>/</a>
+                        <a href="#" class="text-white"><small class="text-white mx-2">Admin</small>/</a>
                         <a href="/review" class="text-white"><small class="text-white mx-2">Post Review</small>/</a>
                         <a href="/" class="text-white"><small class="text-white ms-2">Back To Start To Login In Other Account</small></a>
                     </div>
@@ -69,22 +69,22 @@
                         <div class="navbar-nav mx-auto">
                             <a href="/" class="nav-item nav-link active">Home</a>
 
-                            <a href="/playlists" class="nav-item nav-link">playlists</a>
+                            <a href="/playlists" class="nav-item nav-link">Playlists</a>
                             <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">most listened</a>
+                                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Most listened</a>
                                 <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                                    <a href="/songs" class="dropdown-item">to songs</a>
-                                    <a href="/artists" class="dropdown-item">to artists</a>
+                                    <a href="/songs" class="dropdown-item">Songs</a>
+                                    <a href="/artists" class="dropdown-item">Artists</a>
                                 </div>
                             </div>
                             <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">recommended</a>
+                                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Recommended</a>
                                 <div class="dropdown-menu m-0 bg-secondary rounded-0">
-                                    <a href="/songlist" class="dropdown-item">songs</a>
+                                    <a href="/songlist" class="dropdown-item">Songs</a>
                                     <a href="/global_top_tracks" class="dropdown-item">TOP songs</a>
                                 </div>
                             </div>
-                            <a href="/global_and_kr_tendency" class="nav-item nav-link">NEW & TOP track</a>
+                            <a href="/global_and_kr_tendency" class="nav-item nav-link">NEW & TOP tracks</a>
 
                         </div>
                         
@@ -157,14 +157,13 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-item">
                             <h4 class="text-light mb-3">Why People Like us!</h4>
-                            <p class="mb-4">typesetting, remaining essentially unchanged. It was 
-                                popularised in the 1960s with the like Aldus PageMaker including of Lorem Ipsum.</p>
+                            <p class="mb-4">1st Korea website to see your Spotify datas !</p>
                             <a href="" class="btn border-secondary py-2 px-4 rounded-pill text-primary">Read More</a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <div class="d-flex flex-column text-start footer-item">
-                            <h4 class="text-light mb-3">Shop Info</h4>
+                            <h4 class="text-light mb-3">Website Info</h4>
                             <a class="btn-link" href="">About Us</a>
                             <a class="btn-link" href="">Contact Us</a>
                             <a class="btn-link" href="">Privacy Policy</a>
@@ -174,24 +173,9 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <div class="d-flex flex-column text-start footer-item">
-                            <h4 class="text-light mb-3">Account</h4>
-                            <a class="btn-link" href="">My Account</a>
-                            <a class="btn-link" href="">Shop details</a>
-                            <a class="btn-link" href="">Shopping Cart</a>
-                            <a class="btn-link" href="">Wishlist</a>
-                            <a class="btn-link" href="">Order History</a>
-                            <a class="btn-link" href="">International Orders</a>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6">
                         <div class="footer-item">
                             <h4 class="text-light mb-3">Contact</h4>
-                            <p>Address: 1429 Netus Rd, NY 48247</p>
-                            <p>Email: Example@gmail.com</p>
-                            <p>Phone: +0123 4567 8910</p>
-                            <p>Payment Accepted</p>
-                            <img src="../static/img/payment.png" class="img-fluid" alt="">
+                            <p>Address: 세종대학교</p>
                         </div>
                     </div>
                 </div>
@@ -210,7 +194,7 @@
                         <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                         <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                         <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                        Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a> Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
+                        Designed By G.O.A.T Team<a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a> Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
                     </div>
                 </div>
             </div>
