--- a/templates/main.html
+++ b/templates/main.html
@@ -64,7 +64,7 @@
                                     </div>
                                     <div class="p-4">
                                         <h4>Your Playlist</h4>
-                                        <p class="mb-2">check your playlists!<br/><br/></p>
+                                        <p class="mb-2">Check your playlists!<br/><br/></p>
                                     </div>
                                 </div>
                             </a>    
@@ -75,7 +75,7 @@
                                     </div>
                                     <div class="p-4">
                                         <h4>Most Listened Song</h4>
-                                        <p class="mb-2">You can check what songs you usually enjoy listening <br/><br/></p>
+                                        <p class="mb-2">Check what songs you usually enjoy listening :-&#41<br/><br/></p>
                                     </div>
                                 </div>
                             </a>
@@ -86,7 +86,7 @@
                                     </div>
                                     <div class="p-4">
                                         <h4>Most Listened Artists</h4>
-                                        <p class="mb-2">You can check what artists you usually like<br/><br/></p>
+                                        <p class="mb-2">Check what artists you usually like<br/><br/></p>
                                     </div>
                                 </div>
                             </a>
@@ -99,7 +99,7 @@
                                     </div>
                                     <div class="p-4">
                                         <h4>SOTS recommends you</h4>
-                                        <p class="mb-2">SOTS AI song recommendation based on your spotify data</p>
+                                        <p class="mb-2">SOTS AI song recommendation based on your Spotify data</p>
                                     </div>
                                 </div>
                             </a>
@@ -109,7 +109,7 @@
                                         <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
                                     </div>
                                     <div class="p-4">
-                                        <h4>Global top tracks</h4>
+                                        <h4>Global Top Tracks</h4>
                                         <p class="mb-2">global hot track<br/><br/></p>
                                     </div>
                                 </div>
@@ -120,9 +120,9 @@
                                         <img src="../static/img/best-product-1.jpg" class="img-fluid rounded-circle w-100" alt="">
                                     </div>
                                     <div class="p-4">
-                                        <h4>WEEKLY HOT TRACKS in 2 way</h4>
-                                        <p class="mb-2">see weekly hot tracks of <span style="color: red;">international </span>AND 
-                                            <br/><span style="color: red;">South Korea's</span> most played song of the week
+                                        <h4>WEEKLY HOT TRACKS</h4>
+                                        <p class="mb-2">See weekly hot tracks of <span style="color: red;">international </span>AND 
+                                            <br/><span style="color: red;">South Korea's</span> most played song of the week !
                                         </p>
                                     </div>
                                 </div>
@@ -141,7 +141,7 @@
                 <div class="tab-class text-center">
                     <div class="row g-4">
                         <div class="col-lg-4 text-start">
-                            <h1>weekly hot track</h1>
+                            <h1>Weekly hot tracks</h1>
                         </div>
                         <div class="col-lg-8 text-end">
                             <ul class="nav nav-pills d-inline-flex text-center mb-5">
@@ -233,7 +233,7 @@
             <div class="text-center mx-auto mb-5" style="max-width: 700px">
                 <h1 class="display-6">Team GOAT members</h1>
                 <p>
-                    check GOAT members!
+                    Check GOAT members!
                 </p>
             </div>
             <div class="container py-5">
@@ -298,10 +298,9 @@
                     <div class="col-lg-8 p-5">
                         <div class="py-4 p-4">
                             <h1 class="display-3 text-white">What track do you enjoy in usual? </h1>
-                            <h1 class="display-3 text-white">in <span class="text-primary">SOTS</span>,</h1>
+                            <h1 class="display-3 text-white">In <span class="text-primary">SOTS</span>,</h1>
 
-                            <p class="mb-4 text-dark">The generated Lorem Ipsum is therefore always free from repetition injected humour, or non-characteristic words etc.</p>
-                            <a href="#" class="banner-btn btn border-2 border-white rounded-pill text-dark py-3 px-5">BUY</a>
+                            <p class="mb-4 text-dark">we think you deserve the better website to see your Spotify datas.</p>
                         </div>
                     </div>
 
@@ -323,7 +322,7 @@
             <div class="container py-5">
                 <div class="testimonial-header text-center">
                     <h4 class="display-5 text-primary">How was SOTS?</h4>
-                    <h1 class="display-8 mb-5 text-dark">please give us short review after using out platform!</h1>
+                    <h1 class="display-8 mb-5 text-dark">Please give us short review after using out platform!</h1>
                     <br/><br/>
                 </div>
                 <!-- review start -->
@@ -332,13 +331,13 @@
                         <div class="position-relative">
                             <i class="fa fa-quote-right fa-2x text-secondary position-absolute" style="bottom: 30px; right: 0;"></i>
                             <div class="mb-4 pb-4 border-bottom border-secondary">
-                                <p class="mb-0">Lorem Ipsum is simply dummy text of the printing Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                <p class="mb-0">The website is visually very pleasing. The colors are harmonious and the fonts are well-chosen. The layout is clear and well-organized, making navigation easy.
                                 </p>
                             </div>
                             <div class="d-flex align-items-center flex-nowrap">
                                 
                                 <div class="ms-4 d-block">
-                                    <h4 class="text-dark">Client Name</h4>
+                                    <h4 class="text-dark">François Hollande</h4>
                                 </div>
                             </div>
                         </div>
@@ -347,13 +346,13 @@
                         <div class="position-relative">
                             <i class="fa fa-quote-right fa-2x text-secondary position-absolute" style="bottom: 30px; right: 0;"></i>
                             <div class="mb-4 pb-4 border-bottom border-secondary">
-                                <p class="mb-0">Lorem Ipsum is simply dummy text of the printing Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                <p class="mb-0">Navigating the site is extremely intuitive. The menus are well-structured and it's easy to find the information you're looking for. Additionally, the site is fully responsive, providing an excellent experience on mobile devices.
                                 </p>
                             </div>
                             <div class="d-flex align-items-center flex-nowrap">
                                 
                                 <div class="ms-4 d-block">
-                                    <h4 class="text-dark">Client Name</h4>
+                                    <h4 class="text-dark">John Cena</h4>
                                 </div>
                             </div>
                         </div>
@@ -362,13 +361,13 @@
                         <div class="position-relative">
                             <i class="fa fa-quote-right fa-2x text-secondary position-absolute" style="bottom: 30px; right: 0;"></i>
                             <div class="mb-4 pb-4 border-bottom border-secondary">
-                                <p class="mb-0">Lorem Ipsum is simply dummy text of the printing Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                <p class="mb-0">The website loads very quickly, even with an average internet connection. Pages open instantly and there is no noticeable lag.
                                 </p>
                             </div>
                             <div class="d-flex align-items-center flex-nowrap">
                                 
                                 <div class="ms-4 d-block">
-                                    <h4 class="text-dark">Client Name</h4>
+                                    <h4 class="text-dark">BTS</h4>
                                 </div>
                             </div>
                         </div>
@@ -377,13 +376,13 @@
                         <div class="position-relative">
                             <i class="fa fa-quote-right fa-2x text-secondary position-absolute" style="bottom: 30px; right: 0;"></i>
                             <div class="mb-4 pb-4 border-bottom border-secondary">
-                                <p class="mb-0">Lorem Ipsum is simply dummy text of the printing Ipsum has been the industry's standard dummy text ever since the 1500s,
+                                <p class="mb-0">The content is of high quality. Articles are well-written, informative, and relevant. Furthermore, the images and videos add extra value to the content.
                                 </p>
                             </div>
                             <div class="d-flex align-items-center flex-nowrap">
                                 
                                 <div class="ms-4 d-block">
-                                    <h4 class="text-dark">Client Name</h4>
+                                    <h4 class="text-dark">Daft Punk</h4>
                                 </div>
                             </div>
                         </div>
@@ -391,7 +390,7 @@
                 </div>
                 <!-- review end -->
                 <br/>
-                <a class="btn border border-secondary rounded-pill px-4 text-primary" href="/review">post review!</a> 
+                <a class="btn border border-secondary rounded-pill px-4 text-primary" href="/review">Post a review !</a> 
                  
             </div>
         </div>
