make feature name consistently (WEEKLY HOT TRACKS in 2 way)

--- a/templates/main.html
+++ b/templates/main.html
@@ -120,7 +120,7 @@
                                         <img src="../static/img/mainImg/check.jpg" class="img-fluid rounded-circle w-100" alt="">
                                     </div>
                                     <div class="p-4">
-                                        <h4>WEEKLY HOT TRACKS</h4>
+                                        <h4>WEEKLY HOT TRACKS in 2 way</h4>
                                         <p class="mb-2">See weekly hot tracks of <span style="color: red;">international </span>AND 
                                             <br/><span style="color: red;">South Korea's</span> most played song of the week !
                                         </p>
