Change details review page

--- a/templates/review.html
+++ b/templates/review.html
@@ -21,7 +21,7 @@
                 <div class="col-12">
                     <div class="text-center mx-auto" style="max-width: 700px;">
                         <h1 class="text-primary">How was SOTS?</h1>
-                        <p class="mb-4">please give us short review after using out platform! &emsp;<a href="/home">go back</a></p>
+                        <p class="mb-4">Please give us short review after using out platform! &emsp;<a href="/home">Go back</a></p>
                     </div>
                 </div>
 
@@ -32,7 +32,7 @@
                         <input type="text" class="w-100 form-control border-0 py-3 mb-4" placeholder="도현님 폼 양식에 맞춰서 수정해주세요 ~!">
                         <textarea class="w-100 form-control border-0 mb-4" rows="5" cols="10" placeholder="Your Message"></textarea>
                         <div style="padding: 30px"></div>
-                        <button class="w-100 btn form-control border-secondary py-3 bg-white text-primary " type="submit">post</button>
+                        <button class="w-100 btn form-control border-secondary py-3 bg-white text-primary " type="submit">Submit</button>
                     </form>
                 </div>
 
