--- a/templates/layout/recmmdLayout.html
+++ b/templates/layout/recmmdLayout.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Top 10 Albums - 2023</title>
+  <title>{% block title %} SOTS {% endblock %}</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="../static/css/SLstyle.css">
 
